@@ -1,3 +1,10 @@
+2008-05-28  Robert Millan  <rmh@aybabtu.com>
+
+	* util/biosdisk.c (linux_find_partition, get_os_disk): Handle MMC
+	devices.
+	* util/grub-mkdevicemap.c (get_mmc_disk_name)
+	(make_device_map): Likewise.
+
 2008-05-20  Bean  <bean123ch@gmail.com>
 
 	* fs/fshelp.c (grub_fshelp_map_block): New function.
